--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       <th class="chris" id="22">Chris</th>
       <th class="josie" id="23">Josie</th>
     </tr>
-
+<tr id="tip"><td colspan=4 style="font-size:1em" onclick="document.getElementById('tip').style.display = 'none';">Click items to cross them off! Click this tip to make it disappear. </td></tr>
+<tr>
     <td class="momcooking" id="1" onclick="toggleVisible(1,'momcooking')">Loading
     </td>
     <!-- checkmark <td id="50"><input type="checkbox" class="regular-checkbox"></input>
