--- a/index.html
+++ b/index.html
@@ -85,20 +85,22 @@
       <th class="chris" id="22">Chris</th>
       <th class="josie" id="23">Josie</th>
     </tr>
-<tr id="tip"><td colspan=4 style="font-size:1em" onclick="document.getElementById('tip').style.display = 'none';">Click items to cross them off! Click this tip to make it disappear. </td></tr>
-<tr>
-    <td class="momcooking" id="1" onclick="toggleVisible(1,'momcooking')">Loading
-    </td>
-    <!-- checkmark <td id="50"><input type="checkbox" class="regular-checkbox"></input>
+    <tr id="tip">
+      <td colspan=4 style="font-size:1em" onclick="document.getElementById('tip').style.display = 'none';">Click items to cross them off! Click this tip to make it disappear. </td>
+    </tr>
+    <tr>
+      <td class="momcooking" id="1" onclick="toggleVisible(1,'momcooking')">Loading
+      </td>
+      <!-- checkmark <td id="50"><input type="checkbox" class="regular-checkbox"></input>
      </td> checkmark -->
-    <td class="robbiecooking" id="2" onclick="toggleVisible(2,'robbiecooking')">Loading</td>
-    <!-- checkmark <td id="60"><input type="checkbox" class="regular-checkbox"></input>
+      <td class="robbiecooking" id="2" onclick="toggleVisible(2,'robbiecooking')">Loading</td>
+      <!-- checkmark <td id="60"><input type="checkbox" class="regular-checkbox"></input>
      </td> checkmark -->
-    <td class="chriscooking" id="3" onclick="toggleVisible(3,'chriscooking')">Loading</td>
-    <!-- checkmark <td id="70"><input type="checkbox" class="regular-checkbox"></input>
+      <td class="chriscooking" id="3" onclick="toggleVisible(3,'chriscooking')">Loading</td>
+      <!-- checkmark <td id="70"><input type="checkbox" class="regular-checkbox"></input>
      </td> checkmark -->
-    <td class="josiecooking" id="4" onclick="toggleVisible(4,'josiecooking')">Loading</td>
-    <!-- checkmark <td id="80"><input type="checkbox" class="regular-checkbox"></input>
+      <td class="josiecooking" id="4" onclick="toggleVisible(4,'josiecooking')">Loading</td>
+      <!-- checkmark <td id="80"><input type="checkbox" class="regular-checkbox"></input>
      </td> checkmark -->
     </tr>
     <tr>
